2018-09-19  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1119
	
	* src/CMakeLists.txt:  Added src/linefunctiondata.cc,h
	to separate the new pressure broadening and line mixing 
	interface from the old
	
	* src/linefunctiondata.cc,h:  Moved namesake class here from 
	src/pressurebroadeningdata.cc,h.  Also added a translation function
	from old pressurebroadeningdata and linemixingdata to new
	linefunctiondata
	
	* src/m_cloudradar.cc:  Small compile warning corrected.
	Someone over-indented some error code, probably by a copy-paste
	miss that automatically indented something to the wrong level.
	This causes the warning (paraphrased): Your if-statement guarding
	does not include statement on same indentation level.
	
	* src/pressurebroadeningdata.cc,h:  Removed old interface
	
	* src/quantum.cc,h:  Made it easier to get the name from a 
	quantum identifier

2018-09-19  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1118

	* src/m_microphysics.cc (pndFromPsd):

	Add same runtime error as for pndFromPsdBasic.

2018-09-19  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-1117

	* src/m_microphysics.cc (pndFromPsdBasic):

	Throw runtime error if psd_size_grid contains duplicate values.
	Avoids assertion in bin_quadweights caused by user input. Reported by
	Freddy.

2018-09-18  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1116
	
	Update to internal pressure broadening interface
	
	* src/absorption.cc, jacobian.{cc,h}, src/linefunctions.cc,
	src/linemixing.cc, src/linerecord.cc, src/m_linemixing.cc,
	src/m_linerecord.cc, src/nlte.cc, :  Updated for change in pressure
	and line mixing interface.
	
	* src/linerecord.h:  Where the interface now resides
	
	* src/m_nlte.cc, methods.cc:  Added helper function to
	get quantum identifiers from lines
	
	* src/pressurebroadeningdata.cc,h:  Still tinkering with 
	new pressure/line mixing routine.  Today's changes helps
	
	* src/quantum.cc,h: Helpers for the nlte helper function
